# qingstor-sdk-c-and-cpp-1

./: CMakeLists.txt  LICENSE1  README.md
CMake/: FindCurl.cmake  FindJsoncpp.cmake  FindOpenSSL.cmake  FindYaml.cmake
docs/: configuration.md  installation.md  sdk_c_style_usage.md  sdk_cpp_style_usage.md
include/: QingStor.h  QsSdkOption.h
include/service_with_c_style/: QingStorCStyle.h  QsList.h
samples/samples_sdk_c/: CMakeLists.txt  main  main.c
samples/samples_sdk_cpp/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  QsSdkOption.h.in
src/config/: QsConfig.cpp
src/http/: CurlHandlerPool.cpp  HttpClient.cpp
src/include/http/: CurlHandlerPool.h  HttpClient.h
src/service/: Bucket.cpp  QingStor.cpp
src/service/service_with_c_style/: QingStorCStyle.cpp
template/header/: service.tmpl  shared.tmpl
template/header_with_c_style/: service.tmpl  shared.tmpl
template/source/: service.tmpl  shared.tmpl
template/source_with_c_style/: service.tmpl  shared.tmpl
test/c_style_tests/: CTestBucket.cpp  CTestService.cpp
test/cpp_style_tests/: CppTestService.cpp
